src/test/ui/associated-types/issue-27675-unchecked-bounds.stderr
error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/issue-27675-unchecked-bounds.rs:15:31
   |
LL |     copy::<dyn Setup<From=T>>(t)
   |     ------------------------- ^ the trait `Copy` is not implemented for `T`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `copy`
  --> $DIR/issue-27675-unchecked-bounds.rs:10:12
   |
LL | fn copy<U: Setup + ?Sized>(from: &U::From) -> U::From {
   |            ^^^^^ required by this bound in `copy`
help: consider restricting type parameter `T`
   |
LL | pub fn copy_any<T: std::marker::Copy>(t: &T) -> T {
   |                  +++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
